Fix alignment and appearance of boxes in review requests.
We have a bunch of stacked boxes in our review request and diffviewer pages.
When we introduced the new look for diffs, it became apparent to me that we had
some alignment and bleeding issues in these pages:
- Diff boxes were 2px less wide than anything else.
- Diff boxes didn't have a shadow.
- The collapse buttons for reviews and change descriptions weren't vertically
  centered.
- Change descriptions have a kind of wacky structure where there are two
  different elements with the "changedesc" class. This meant that we had some
  bleeding of the background color outside of the border (which I only
  noticed when zoomed way in).

Reviewed at https://reviews.reviewboard.org/r/4364/

--- a/reviewboard/static/rb/css/diffviewer.less
+++ b/reviewboard/static/rb/css/diffviewer.less
@@ -67,8 +67,8 @@
 .diff-container {
   .border-radius(@box-border-radius);
   border: 1px @diff-border-color solid;
-  margin: 2px;
   overflow: hidden;
+  .box-shadow(@box-shadow);
 }
 
 .sidebyside {
